// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Text /> correctly snapshot testing with bold text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 kEMAuI"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`Renders <Text /> correctly snapshot testing with regular text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 lcAiRN"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`Renders <Text /> correctly snapshot testing with truncate text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 jAsASc"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`Renders <Text /> correctly snapshot testing with underlined text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-6jf9e4-0 dQhpDL"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;
